# ProjectMCodes

./: .gitignore  BrawlFuncMap.map  CMakeLists.txt  README.md
BuildSystem/: Build.py  BuildFromCMake.py  CodeSegment.py  Function.py  Main.py  Section.py  Settings.py  VariableLocations.py  convertAddressesToLinkerCommands.py  insertBranches.py  makeFunctionMap.py  makeInjections.py  makeLoadSetup.py  makeSetup.py  settings-TP.json  settings.json
CMake/: DebugSettings.cmake  Functions.cmake  Paths.cmake
Codes/: CMakeLists.txt
Codes/CSSControls/: CSSCustomControls.cpp  CSSCustomControls.h  CSSTagMenuState.cpp  CSSTagMenuState.h  ControllerManager.cpp  ControllerManager.h  CustomControlOffsets.h
Codes/CameraScale/: IncrementScale.cpp
Codes/CodeMenu/: CMakeLists.txt  ControlCodes.cpp  FudgeMenu copy.cpp  FudgeMenu copy.h  FudgeMenu.h  FudgeMenuPages.cpp  FudgeMenuPages.h  _TrainingOptionDefs.h  main.cpp  menu.cpp  menu.h
Codes/CrowdControl/: CMakeLists.txt  CrowdControl.cpp  CrowdControl.h  EXIPacket.cpp  EffectActionHandler.cpp  EffectActionHandler.h  EffectAttributeHandler.cpp  EffectAttributeHandler.h  EffectDrawHandler.cpp  EffectDrawHandler.h  EffectGameHandler.cpp  EffectGameHandler.h  EffectItemHandler.cpp  EffectItemHandler.h  EffectModeHandler.cpp  EffectModeHandler.h  EffectPositionHandler.cpp  EffectPositionHandler.h  EffectStageHandler.cpp  EffectStageHandler.h  EffectStatusHandler.cpp  EffectStatusHandler.h  MenuPages.cpp  MenuPages.h  PPlusCrowdControl.cs  README.md  Utilities.cpp  Utilities.h  menu.cpp  menu.h
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ar/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ca/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/cs/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/da/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/de/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/el/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/es/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/fa/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/fr/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/hr/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/hu/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/it/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ja/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ko/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ms/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/nb/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/nl/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/pl/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/pt/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/pt_BR/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ro/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/ru/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/sr/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/sv/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/tr/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/zh_CN/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/Languages/zh_TW/: dolphin-emu.mo
Codes/CrowdControl/Dolphin-SSBB-CC/User/Config/: Dolphin.ini  FreeLookController.ini  GBA.ini  GCKeyNew.ini  GCPadNew.ini  Logger.ini  Qt.ini  WiimoteNew.ini
Codes/CrowdControl/Dolphin-SSBB-CC/User/Wii/shared2/sys/: SYSCONF
Codes/CustomAiFunctions/: CustomAiFunctions.cpp  CustomAiFunctions_deprecated.cpp
Codes/DebugTest/: CMakeLists.txt  Test.cpp  Test.h
Codes/EnableDebug/: CMakeLists.txt  enablers.cpp
Codes/FudgeMenu/: CMakeLists.txt  FudgeMenu.cpp  FudgeMenu.h  FudgeMenuPages.cpp  FudgeMenuPages.h  hitboxHeatmap.cpp  hitboxHeatmap.h  main.cpp  menu.h
Codes/ManualMessage/: MessageMaker.cpp
Codes/OGGSupport/: CMakeLists.txt  main.cpp
Codes/PrintTest/: print.cpp
Codes/PureAI/: CMakeLists.txt  CustomAiFunctions.cpp  MovementTracker.cpp  MovementTracker.h  PatternManager.h  TrainingDataInit.cpp  TrainingDataInit.h  WeightedDie.cpp  main.cpp
Codes/Random1To1Alts/: Random1To1Alts.cpp  Random1To1Alts.h  StageInfo.h
Codes/ReplayFix/: AsyncFileIO.h  CMakeLists.txt  CircularBuffer.cpp  FighterInputDataForReplayFrame.cpp  FighterInputDataForReplayFrame.h  Play.cpp  Play.h  PlaybackFileSyncer.h  Record.cpp  Record.h  ReplayEvent.cpp  ReplayEvent.h  ReplayEventIDs.h  ReplayFix.cpp  ReplayFix.h  ReplayFrameData.cpp  ReplayFrameData.h  ReplayFrameEndEvent.cpp  ReplayFrameEndEvent.h  ReplayFrameEventManager.cpp  ReplayFrameEventManager.h  ReplayFrameStartEvent.cpp  ReplayFrameStartEvent.h  ReplayGameEndEvent.cpp  ReplayGameEndEvent.h  ReplayGameStartEvent.cpp  ReplayGameStartEvent.h  ReplayGameStartInfo.cpp  ReplayGameStartInfo.h  ReplayLoadEvent.cpp  ReplayLoadEvent.h  ReplayPlayer.cpp  ReplayPlayer.h  ReplayPreFrameFighterEvent.cpp  ReplayPreFrameFighterEvent.h  ReplayRecorder.h
Codes/SimpleControllerTester/: CMakeLists.txt  main.cpp
Codes/SlippiTest/: SlippiTest.cpp
Codes/SuperTraining/: CMakeLists.txt  CustomAiFunctions.cpp  CustomAiFunctions.h  CustomAiRewrite.cpp  FudgeMenu.cpp  FudgeMenu.h  FudgeMenuPages.cpp  FudgeMenuPages.h  MovementTracker.cpp  MovementTracker.h  PatternManager.h  WeightedDie.cpp  WeightedDie.h  _TrainingOptionDefs.h  __TEMPH.h  ___SUCCESS.cpp  __temp.sh  _act_a_goro_aiAct.cpp  _update_aiInput_decomp.cpp  _update_aiInput_notes.txt  hitboxHeatmap.cpp  hitboxHeatmap.h  main.cpp  menu.cpp  menu.h  print.cpp
Codes/SuperTraining/dataAnalysis/: ___FAIL.cpp  _update_aiInput_asLua.lua  update_aiInput_notes.txt
Codes/TEST/: CMakeLists.txt
GCTRM/: Project+BOOST.txt  Project+RSBE01.txt
Globals/: Assembly.cpp  Assembly.h  CMakeLists.txt  Debug.cpp  Debug.h  FuncMap.h  Memory.cpp  Memory.h  Setup.cpp  Setup.h  stdarg.h  stddef.cpp  stddef.h
Libraries/: CMakeLists.txt
MakeSD/: main.bat
Setup/: LoadSetupFile.s  Setup.cpp  Setup.h
(+292 files in other folders)
